CAS-12427 adding sync script, fixing a few things in the unittest

--- a/vlass_nbs/test_j1302_ql.ipynb
+++ b/vlass_nbs/test_j1302_ql.ipynb
@@ -106,15 +106,15 @@
         "# %% Run tclean [test_j1302_ql] start   @\n",
         "\n",
         "def run_tclean(vis=tstobj.vis, field='',spw='', antenna='', scan='', stokes='I', intent='OBSERVE_TARGET#UNSPECIFIED', datacolumn='data',\n",
-        "                imagename=None, niter=None, restoration=None, compare_tclean_pars=None,\n",
-        "                phasecenter=tstobj.phasecenter, reffreq='3.0GHz', deconvolver='mtmfs',\n",
-        "                cell='1.0arcsec', imsize=7290, gridder='mosaic', restoringbeam='common',\n",
-        "                specmode='mfs', nchan=-1, outframe='LSRK', perchanweightdensity=False, \n",
-        "                wprojplanes=1, mosweight=False, conjbeams=False, usepointing=False,\n",
-        "                rotatepastep=360.0, pblimit=0.2, scales=[0], nterms=2, pbcor=False,\n",
-        "                weighting='briggs', robust=1.0, npixels=0, threshold=0.0, nsigma=0,\n",
-        "                cycleniter=-1, cyclefactor=1.0, interactive=0, fastnoise=True,\n",
-        "                calcres=True, calcpsf=True, savemodel='none', parallel=False):\n",
+        "               imagename=None, niter=None, restoration=None, compare_tclean_pars=None,\n",
+        "               phasecenter=tstobj.phasecenter, reffreq='3.0GHz', deconvolver='mtmfs',\n",
+        "               cell='1.0arcsec', imsize=7290, gridder='mosaic', restoringbeam='common',\n",
+        "               specmode='mfs', nchan=-1, outframe='LSRK', perchanweightdensity=False, \n",
+        "               wprojplanes=1, mosweight=False, conjbeams=False, usepointing=False,\n",
+        "               rotatepastep=360.0, pblimit=0.2, scales=[0], nterms=2, pbcor=False,\n",
+        "               weighting='briggs', robust=1.0, npixels=0, threshold=0.0, nsigma=0,\n",
+        "               cycleniter=-1, cyclefactor=1.0, interactive=0, fastnoise=True,\n",
+        "               calcres=True, calcpsf=True, savemodel='none', parallel=False):\n",
         "    params = locals()\n",
         "    params = {k:params[k] for k in filter(lambda x: x not in ['tstobj'], params.keys())}\n",
         "    tstobj._run_tclean(**params)\n",
@@ -226,7 +226,7 @@
         "success = success1 and success2 and success4 and success5 and th.check_final(report)\n",
         "casalog.post(report, \"INFO\")\n",
         "\n",
-        "# %% Compare Expected Valued [test_j1302_ql] end @"
+        "# %% Compare Expected Values [test_j1302_ql] end @"
       ],
       "metadata": {
         "id": "JDFK5mv7g9_y"
