CAS-12427 added test_j1302_mosaic_cube.ipynb, updated test_j1302_ql.ipynb

--- a/vlass_nbs/test_j1302_ql.ipynb
+++ b/vlass_nbs/test_j1302_ql.ipynb
@@ -80,10 +80,10 @@
         "img0 = 'VLASS1.2.ql.T08t20.J1302.10.2048.v1.I.iter0'\n",
         "img1 = 'VLASS1.2.ql.T08t20.J1302.10.2048.v1.I.iter1'\n",
         "tstobj.prepData()\n",
-        "rundir = \"/users/bbean/dev/CAS-12427/src/casalith/build-casalith/work/linux/test_vlass_j1302_QL_unittest\"\n",
+        "# rundir = \"/users/bbean/dev/CAS-12427/src/casalith/build-casalith/work/linux/test_vlass_j1302_QL_unittest\"\n",
         "# os.system(f\"mv {rundir}/run_results/VLASS* {rundir}/nosedir/test_vlass_1v2/\")\n",
         "\n",
-        "# %% Set local vars [test_j1302_ql] end @\n"
+        "# %% Set local vars [test_j1302_ql] end @"
       ],
       "metadata": {
         "id": "TE4ZDil_g0bi"
@@ -224,7 +224,7 @@
         "\n",
         "report  = \"\".join([report0, report1, report2, report4, report5])\n",
         "success = success1 and success2 and success4 and success5 and th.check_final(report)\n",
-        "casalog.post(report, \"INFO\")\n",
+        "casalog.post(f\"{report}\\nSuccess: {success}\", \"INFO\")\n",
         "\n",
         "# %% Compare Expected Values [test_j1302_ql] end @"
       ],
