--- a/test_standard_cube_briggsbwtaper.ipynb
+++ b/test_standard_cube_briggsbwtaper.ipynb
@@ -328,10 +328,7 @@
     "                 parallel=parallel,\n",
     "                 verbose=True)\n",
     "\n",
-    "# %% test_standard_cube_briggsbwtaper_tclean_1 end @\n",
-    "\n",
-    "print('Copying iter0 files to iter1')\n",
-    "standard.copy_products(file_name+'0', file_name+'1')"
+    "# %% test_standard_cube_briggsbwtaper_tclean_1 end @\n"
    ]
   },
   {
@@ -346,6 +343,9 @@
    },
    "outputs": [],
    "source": [
+    "print('Copying iter0 files to iter1')\n",
+    "standard.copy_products(file_name+'0', file_name+'1')\n",
+    "\n",
     "casatasks.imstat(standard.file_name + '0.psf')"
    ]
   },
@@ -462,6 +462,55 @@
    "source": [
     "#clean_data()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example: Modifying Expected Metrics JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Getting expected values JSON\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "new_dict = standard.exp_dict\n",
+    "new_dict_pretty = json.dumps(new_dict, indent=4)\n",
+    "\n",
+    "print(new_dict_pretty)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modifying expected values JSON\n",
+    "\n",
+    "new_dict['exp_im_stats']['com_bmin'][1] = 6.203"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting expected values JSON\n",
+    "\n",
+    "standard.exp_dict = new_dict\n",
+    "\n",
+    "exp_dict_pretty = json.dumps(standard.exp_dict, indent=4)\n",
+    "\n",
+    "print(exp_dict_pretty)"
+   ]
   }
  ],
  "metadata": {
@@ -474,7 +523,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
