Restructure of repository to fit the requirement of running directly with casa. Aslo added a new script to be used when not jsut running a s a module.

--- a/test_standard_cube_briggsbwtaper.ipynb
+++ b/test_standard_cube_briggsbwtaper.ipynb
@@ -192,8 +192,8 @@
     "import pylab as pl\n",
     "import numpy as np\n",
     "\n",
-    "import nb1.test_standard_cube_briggsbwtaper as stk\n",
-    "import stk_utils.stats_table as stk_table\n",
+    "import scripts.test_standard_cube_briggsbwtaper as stk\n",
+    "#import stk_utils.stats_table as stk_table\n",
     "\n",
     "pn.extension('tabulator')"
    ]
