--- a/test_mosaic_cube_briggsbwtaper.ipynb
+++ b/test_mosaic_cube_briggsbwtaper.ipynb
@@ -192,10 +192,7 @@
     "import pylab as pl\n",
     "import numpy as np\n",
     "\n",
-    "import nb3.test_mosaic_cube_briggsbwtaper as stk\n",
-    "import stk_utils.stats_table as stk_table\n",
-    "\n",
-    "pn.extension('tabulator')"
+    "import scripts.test_mosaic_cube_briggsbwtaper as stk\n"
    ]
   },
   {
@@ -418,7 +415,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
