Add code to stakeholder test scripts to allow the user to 1) Run code from any directory and 2) use  instead of running as . Running using runtest.py has not been looked into yet. Also added display of weblog html page inline for each stakeholder notebook.

--- a/test_mosaic_cube_briggsbwtaper.ipynb
+++ b/test_mosaic_cube_briggsbwtaper.ipynb
@@ -403,6 +403,24 @@
    "source": [
     "#clean_data()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display Weblog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "\n",
+    "IFrame(src='./test_tclean_alma_pipeline_weblog.html', width=900, height=600)"
+   ]
   }
  ],
  "metadata": {
